tests/errors/collections/list_overflow_pop.sad
# list_overflow_pop test
a = [1, 2]
risk {
    a.pop(100000000000000000000000000000000000000)
} trap IndexOutOfBoundsError e {
    show(e.message)
}
